# Code-Review-Tool

./: .gitignore  README.md  USAGE.md  build_exe.bat  code_review.spec  pyproject.toml
.github/workflows/: build_exe.yml
docs/superpowers/plans/: 2026-06-19-gitnexus-impact.md
docs/superpowers/specs/: 2026-06-19-gitnexus-impact-design.md
review/: __init__.py  __main__.py  cli.py  config.py  gerrit.py  launcher.py  models.py  utils.py
review/engine/: diff_parser.py  hybrid_impact.py  impact_analyzer.py  llm_reviewer.py  module_detector.py  report_generator.py
review/store/: impact_cache.py  report_store.py
review/web/: server.py
tests/: test_cli.py  test_diff_parser.py  test_impact_analyzer.py  test_integration.py  test_llm_reviewer.py  test_report_generator.py  test_report_store.py  test_web.py
web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-ui/src/: App.tsx  api.ts  types.ts
web-ui/src/components/: CommitTimeline.tsx  CommunityGraph.tsx  FileChangeList.tsx  ImpactGraph.tsx  OverviewCard.tsx  ReviewDetails.tsx
web-ui/src/pages/: LauncherPage.tsx  ReportListPage.tsx  ReportPage.tsx
web-ui/src/types/: vis-modules.d.ts
