[project]
name = "review-tool"
version = "0.1.0"
description = "Code review tool analyzing commit impact via GitNexus"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "anthropic>=0.49",
    "pyyaml>=6.0",
    "javalang>=0.13.0",
]

[project.scripts]
review = "review.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
